avprotocol: fix leak in error code paths

https://bugzilla.gnome.org/show_bug.cgi?id=788481